--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 </div>
                 <div class="col-md-8">
                     <p>
-                        Hi, my name is Ante. I am game developer from Croatia who loves games and interesting projects. I can do it all, games or applications, for personal computer of mobile phone. Your wishes, desires and everything you have in mind can become true, just contact me.
+                        Hi, my name is Ante. I am game developer from Croatia who loves games and interesting projects. I can do it all, games or applications, for personal computer or mobile phone. Your wishes, desires and everything you have in mind can become true, just contact me.
                     </p>
                 </div>
             </div>
