--- a/index.html
+++ b/index.html
@@ -91,6 +91,13 @@
                     Main warehouse worker with all respective duties and responsibilities.
                 </p>
             </div>
+		<div data-date="July 2018 – September 2018">
+                <h3>Tokić</h3>
+                <h4>Warehouse worker</h4>
+                <p>
+                    Main warehouse worker with all respective duties and responsibilities.
+                </p>
+            </div>
         </div>
     </div>
     <!-- End #experience -->
