--- a/index.html
+++ b/index.html
@@ -91,8 +91,22 @@
                     Main warehouse worker with all respective duties and responsibilities.
                 </p>
             </div>
-		<div data-date="July 2018 – September 2018">
-                <h3>Tokić</h3>
+		<div data-date="July 2019 – September 2019">
+                <h3>Salvia</h3>
+                <h4>Warehouse worker</h4>
+                <p>
+                    Main warehouse worker with all respective duties and responsibilities.
+                </p>
+            </div>
+		<div data-date="June 2020 – August 2020">
+                <h3>eKupi</h3>
+                <h4>Warehouse worker</h4>
+                <p>
+                    Main warehouse worker with all respective duties and responsibilities.
+                </p>
+            </div>
+		<div data-date="August 2020 – October 2020">
+                <h3>General Logistics Systems Croatia</h3>
                 <h4>Warehouse worker</h4>
                 <p>
                     Main warehouse worker with all respective duties and responsibilities.
