--- a/index.html
+++ b/index.html
@@ -116,15 +116,30 @@
     </div>
     <!-- End #experience -->
 
-    <div id="education">
-        <h2 class="heading">Education</h2>
-        <div class="education-block">
-            <h3>University of Ottawa</h3>
-            <span class="education-date">Sept 2016 - Sept 2017</span>
-            <h4>Bachelor of Science in Computer Science</h4>
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
-            </p>
+    <div class="education-block">
+            <h3>Jelkovec High School</h3>
+            <span class="education-date">Sept 2012 - May 2016</span>
+            <h4>Computer technician</h4>
+            <ul>
+                <li>
+                    Working on a computer
+                </li>
+                <li>
+                    Data preparation and processing control
+                </li>
+                <li>
+                    Database administration and design
+                </li>
+		<li>
+                    Design of operator information systems on external computer equipment (eg computer networks)
+                </li>
+		<li>
+                    Systems engineering of a lower degree of complexity, including the administration of operating systems and computer networks
+                </li>
+		<li>
+                    Quality assurance of education of end marketing users and sales in the field of ICT of other related businesses
+                </li>
+            </ul>
         </div>
         <!-- End .education-block -->
 
