--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 
     <div class="education-block">
             <h3>Jelkovec High School</h3>
-            <span class="education-date">Sept 2012 - May 2016</span>
+            <span class="education-date">September 2012 - May 2016</span>
             <h4>Computer technician</h4>
             <ul>
                 <li>
@@ -144,27 +144,36 @@
         <!-- End .education-block -->
 
         <div class="education-block">
-            <h3>Jelkovec High School</h3>
-            <span class="education-date">Sept 2012 - May 2016</span>
-            <h4>Computer technician</h4>
+            <h3>PISMO</h3>
+            <span class="education-date">March 2021 - August 2016</span>
+            <h4>Unity Game Developer</h4>
             <ul>
                 <li>
-                    Working on a computer
+                    Programming in c # programming language
                 </li>
                 <li>
-                    Data preparation and processing control
+                    Advanced use of Unity development
                 </li>
                 <li>
-                    Database administration and design
+                    Proper making and writing of a video game concept
                 </li>
 		<li>
-                    Design of operator information systems on external computer equipment (eg computer networks)
+                    Proper application of mathematical logic and the laws of physics in video games
                 </li>
 		<li>
-                    Systems engineering of a lower degree of complexity, including the administration of operating systems and computer networks
+                    Organization and execution of a video game project
                 </li>
 		<li>
-                    Quality assurance of education of end marketing users and sales in the field of ICT of other related businesses
+                    Editing and setting up the user interface
+                </li>
+		<li>
+                    Designing satisfactory user interaction with the video game
+                </li>
+		<li>
+                    Video game optimization for multiple different platforms
+                </li>
+		<li>
+                    Logical and artistic design as well as creating multiple levels in a video game
                 </li>
             </ul>
         </div>
