--- a/index.html
+++ b/index.html
@@ -116,7 +116,9 @@
     </div>
     <!-- End #experience -->
 
-    <div class="education-block">
+    <div id="education">
+    	<h2 class="heading">Education</h2>
+    	<div class="education-block">
             <h3>Jelkovec High School</h3>
             <span class="education-date">September 2012 - May 2016</span>
             <h4>Computer technician</h4>
