--- a/index.html
+++ b/index.html
@@ -232,6 +232,16 @@
             <li>Photoshop</li>
 	    <li>Microsoft Office 365</li>
         </ul>
+    <div id="skills">
+        <h2 class="heading">Skills</h2>
+        <ul>
+            <li>C</li>
+	    <li>Unity</li>
+            <li>C#</li>
+	    <li>HTML</li>
+            <li>Photoshop</li>
+	    <li>Microsoft Office 365</li>
+        </ul>
     </div>
     <!-- End #skills -->
 
