--- a/index.html
+++ b/index.html
@@ -223,14 +223,11 @@
     <!-- End #projects -->
 
     <div id="skills">
-        <h2 class="heading">Skills</h2>
+        <h2 class="heading">Programming skills</h2>
         <ul>
             <li>C</li>
-	    <li>Unity</li>
-            <li>C#</li>
+            <li>Unity C#</li>
 	    <li>HTML</li>
-            <li>Photoshop</li>
-	    <li>Microsoft Office 365</li>
         </ul>
     <div id="skills">
         <h2 class="heading">Skills</h2>
