--- a/index.html
+++ b/index.html
@@ -223,21 +223,21 @@
     <!-- End #projects -->
 
     <div id="skills">
-        <h2 class="heading">Programming skills</h2>
+        <h2 class="heading">Programming</h2>
         <ul>
             <li>C</li>
             <li>Unity C#</li>
 	    <li>HTML</li>
         </ul>
     <div id="skills">
-        <h2 class="heading">Skills</h2>
+        <h2 class="heading">Software</h2>
         <ul>
-            <li>C</li>
-	    <li>Unity</li>
-            <li>C#</li>
-	    <li>HTML</li>
-            <li>Photoshop</li>
+	    <li>Unity Engine
+            <li>Adobe Photoshop</li>
 	    <li>Microsoft Office 365</li>
+	    <li>Make Human</li>
+	    <li>Fuse</li>
+	    <li>Mixamo</li>
         </ul>
     </div>
     <!-- End #skills -->
