--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
     <div id="contact">
         <h2>Get in Touch</h2>
          <p>
-             Copyright &copy; 2020 YOUR NAME
+             <h2>Copyright &copy; 2020 YOUR NAME<h2>
          </p>
         </div>
         <!-- End #contact-form -->
