--- a/index.html
+++ b/index.html
@@ -243,9 +243,10 @@
     <!-- End #skills -->
 
     <div id="contact">
-        <h1>Get in Touch</h1>
+        <h2>Get in Touch</h2>
          <p>
-             <h2>Copyright &copy; 2020 YOUR NAME<h2>
+             <h2>Email: ante.tavra123@gmail.com<h2>
+	     <h2>Phone: +385 99 549 7479<h2>
          </p>
         </div>
         <!-- End #contact-form -->
