--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
 		    
 		    <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/ZI.png" />
+                        <img src="images/CYSYI.png" />
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
