--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
 		    
 		    <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/project.png" />
+                        <img src="images/project.jpg" />
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
