--- a/index.html
+++ b/index.html
@@ -192,9 +192,9 @@
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
-                        <h3>Project Name Here</h3>
+                        <h3>Castle War</h3>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+                            Castle War is a offline multiplayer android card game. I was team lead and main programmer in project, programmed all of the game mechanics as well as implementing the audio. 
                         </p>
                         <a href="#">View Project</a>
                     </div>
