--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
                     <div class="project-info">
                         <h3>Castle War</h3>
                         <p>
-                            Castle War is a offline multiplayer android card game. Game was created in 48h game jam in PISMO Novska. I was team lead and main programmer in project, programmed all of the game mechanics like card and deck useage in game as well as cards effects. I also worked on 
+                            Castle War is a offline multiplayer android card game. Game was created in 48h game jam in PISMO Novska. I was team lead and main programmer in project, programmed all of the game mechanics like card and deck useage in game as well as cards effects.
                         </p>
                     </div>
                 </div>
