--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
-			<h3>Jebo ti pas mater u picku</h3>
+			<h3>Cube Escape</h3>
                         <p>
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
                         </p>
