--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
                     <div class="project-info">
 			<h3>Cube Escape</h3>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+                            This is singleplayer hypercasual android game and it is my first video game ever created. I made it first week of my education in PISMO.
                         </p>
                     </div>
                 </div>
@@ -236,7 +236,7 @@
                     <div class="project-info">
                         <h3>Zagorec: Path to the Home</h3>
                         <p>
-                            Loorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+                            This is singleplayer adventure game for PC. Game is full of illusions which make things much harder for player. I was team lead, programmer and UI designer for this game.
                         </p>
                     </div>
                 </div>
