--- a/index.html
+++ b/index.html
@@ -220,9 +220,9 @@
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
-			<h3>Cube Escape</h3>
+			<h3>Cuber</h3>
                         <p>
-                            This is singleplayer hypercasual android game and it is my first video game ever created. I made it first week of my education in PISMO.
+                            Cuber is singleplayer hypercasual android game and it is my first video game ever created. I made it first week of my education in PISMO.
                         </p>
                     </div>
                 </div>
@@ -248,10 +248,9 @@
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
-                        <h3>Project Name Here</h3>
+                        <h3>Can you save yourself ?</h3>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
-                        </p>
+                            A singleplayer survival game for PC. Introduces various weapons and power ups with hyped ending. I was programmer for this game.
                     </div>
                 </div>
                 <!-- End .project -->
@@ -262,9 +261,9 @@
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
-                        <h3>Project Name Here</h3>
+                        <h3>AR Car Catalog</h3>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+                            AR application of car catalog. This application is used to present cars from catalog on paper. Presents car visually with audio record playing the features of a car. I made this application during education in PISMO.
                         </p>
                     </div>
                 </div>
@@ -276,9 +275,9 @@
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
-                        <h3>Project Name Here</h3>
+                        <h3>VR construction</h3>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+                             VR simulation game. It was made in 48 hour VR game jam in Novska. It is used to help construction workers to learn new skills without risk of an injury or breaking expensive gear.
                         </p>
                     </div>
                 </div>
