--- a/index.html
+++ b/index.html
@@ -293,6 +293,7 @@
             <li>C</li>
             <li>Unity C#</li>
 	    <li>HTML</li>
+	    <li>CSS</li>
         </ul>
     <div id="skills">
         <h2 class="heading">Software</h2>
